tests/typeof_without_targs_support/typeof_without_targs_support.exp
Error -------------------------------------------------------------------------------------- with-targs-exported.js:2:69

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   2| declare export const FooClassStringExported: typeof FooClassExported<string>; // unsupported
                                                                          ^^^^^^^^


Error -------------------------------------------------------------------------------------- with-targs-exported.js:5:46

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   5| declare export const barFExported: typeof bar<string>; // unsupported
                                                   ^^^^^^^^


Error -------------------------------------------------------------------------------------- with-targs-exported.js:7:61

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   7| declare export function barGenericExported<X>(cb: typeof bar<X>): X; // unsupported
                                                                  ^^^


Error ----------------------------------------------------------------------------------------------- with-targs.js:4:35

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   4| declare const FooClass: typeof Foo<string>; // unsupported
                                        ^^^^^^^^


Error ----------------------------------------------------------------------------------------------- with-targs.js:7:31

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   7| declare const barF: typeof bar<string>; // unsupported
                                    ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- with-targs.js:14:28

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   14| type Invalid1 = typeof barF<string>; // unsupported
                                  ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- with-targs.js:15:32

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   15| type Invalid2 = typeof FooClass<string>; // unsupported
                                      ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- with-targs.js:16:36

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   16| type Invalid3 = typeof barFExported<string>; // unsupported
                                          ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- with-targs.js:17:46

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   17| type Invalid4 = typeof FooClassStringExported<string>; // unsupported
                                                    ^^^^^^^^


Error ---------------------------------------------------------------------------------------------- with-targs.js:18:27

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   18| type Invalid5 = typeof bar<string, string>; // unsupported
                                 ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- with-targs.js:19:27

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   19| type Invalid6 = typeof Foo<string, string>; // unsupported
                                 ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- with-targs.js:29:46

`typeof` annotation with type arguments is not supported yet. The type arguments will be ignored. [unsupported-syntax]

   29| declare function barGeneric<X>(cb: typeof bar<X>): X; // unsupported
                                                    ^^^


Error ---------------------------------------------------------------------------------------------- with-targs.js:31:26

Cannot call `barGeneric` with function bound to `cb` because number [1] is incompatible with `T` [2] in the return
value. [incompatible-call]

   with-targs.js:31:26
   31| barGeneric<number>(() => 1); // error: number ~> GenericT
                                ^ [1]

References:
   with-targs.js:6:28
    6| declare function bar<T>(): T;
                                  ^ [2]


Error ---------------------------------------------------------------------------------------------- with-targs.js:32:26

Cannot call `barGeneric` with function bound to `cb` because number [1] is incompatible with `T` [2] in the return
value. [incompatible-call]

   with-targs.js:32:26
   32| barGeneric<string>(() => 1); // error: number ~> GenericT
                                ^ [1]

References:
   with-targs.js:6:28
    6| declare function bar<T>(): T;
                                  ^ [2]


Error ---------------------------------------------------------------------------------------------- with-targs.js:33:34

Cannot call `barGenericExported` with function bound to `cb` because number [1] is incompatible with `T` [2] in the
return value. [incompatible-call]

   with-targs.js:33:34
   33| barGenericExported<number>(() => 1); // error: number ~> GenericT
                                        ^ [1]

References:
   with-targs-exported.js:4:22
    4| declare function bar<T>(): T;
                            ^ [2]


Error ---------------------------------------------------------------------------------------------- with-targs.js:34:34

Cannot call `barGenericExported` with function bound to `cb` because number [1] is incompatible with `T` [2] in the
return value. [incompatible-call]

   with-targs.js:34:34
   34| barGenericExported<string>(() => 1); // error: number ~> GenericT
                                        ^ [1]

References:
   with-targs-exported.js:4:22
    4| declare function bar<T>(): T;
                            ^ [2]



Found 16 errors
